force-app/main/default/objects/PSA_411_Asset__c/PSA_411_Asset__c.object-meta.xml
<CustomObject>
    <label>PSA 411 Asset</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>411 Asset Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSA 411 Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>