force-app/main/default/objects/PSA_411_Asset__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PSA 411 Assets</relationshipLabel>
    <relationshipName>PSA_411_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>