force-app/main/default/objects/PSA_411_Asset__c/fields/Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name__c</fullName>
    <description>Name of the asset</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Asset Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>