force-app/main/default/objects/PSA_411_Asset__c/fields/PSA_411_Report__c.field-meta.xml
<CustomField>
    <fullName>PSA_411_Report__c</fullName>
    <label>PSA 411 Report</label>
    <referenceTo>PSA_411_Report__c</referenceTo>
    <relationshipLabel>PSA 411 Assets</relationshipLabel>
    <relationshipName>PSA_411_Assets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>